--- a/说明文件汇总/部署.md
+++ b/说明文件汇总/部署.md
@@ -751,3 +751,6 @@ sudo systemctl restart statau
 
 # 查看状态
 sudo systemctl status statau
+
+# 从github上拉取最新代码
+git clone git@github.com:1157360333-a11y/STATAU-linux.git /var/www/STATAU-linux-time
